# ros2_course

./: .gitignore  test.txt
bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_controller/bumperbot_controller/: simple_controller.py
bumperbot_ws/src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_teleop.yaml
bumperbot_ws/src/bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
bumperbot_ws/src/bumperbot_cpp_examples/: package.xml
bumperbot_ws/src/bumperbot_description/: package.xml
bumperbot_ws/src/bumperbot_description/launch/: display.launch.py  gazebo.launch.py
bumperbot_ws/src/bumperbot_description/rviz/: display.rviz
bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
bumperbot_ws/src/bumperbot_py_examples/: package.xml  setup.py
no_ros_files/: intallation_2.txt  my_robot.urdf
ros2_2_ws/src/my_robot_bringup/: package.xml
ros2_2_ws/src/my_robot_description/: package.xml
ros2_3_ws/src/actions_cpp/: package.xml
ros2_3_ws/src/actions_py/: package.xml  setup.py
ros2_3_ws/src/lifecycle_py/: package.xml  setup.py
ros2_3_ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros2_3_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/catch_them_all/: package.xml  setup.py
ros2_ws/src/my_cpp_pkg/: package.xml
ros2_ws/src/my_py_pkg/: package.xml  setup.py
ros2_ws/src/robot_bringup/: package.xml
ros2_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
(+57 files in other folders)
